# raiku

./: .gitignore  Cargo.toml  test_coverage.sh
src/: haiku.rs  lib.rs  main.rs  sentence.rs  syllables.rs  word.rs
tests/: tests.rs
