[package]
name = "rust-words"
version = "0.1.0"
edition = "2021"

# Build the profiler runtime (required when compiling with options that depend
# on this runtime, such as `-C profile-generate` or `-C instrument-coverage`).
profiler = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.27"
itertools = "0.10.5"
reqwest = "0.11.15"
